--- a/tools/item-editor/index.html
+++ b/tools/item-editor/index.html
@@ -8,7 +8,7 @@
     <?php include "$root/templates/header.php";?>
 
 
-    <form style="display: flex;flex-direction: column;" method="post" action="/tst.php">
+    <form style="display: flex;flex-direction: column;" method="post">
 
       <div class="section">
         <legend>Информация о файле</legend>
